@@ -5,9 +5,10 @@ Summary:        Tools used to configure an ax.25 enabled computer
 
 Group:          Applications/Communications
 License:        GPLv2+
-URL:            http://www.linux-ax25.org/
-Source0:        http://www.linux-ax25.org/pub/%{name}/%{name}-@VERSION@.tar.gz
-BuildRoot:      %{_tmppath}/%{name}-@VERSION@-%{release}-root-%(%{__id_u} -n)
+URL:            http://linuxax25.googlecode.com/
+Source0:        http://code.google.com/p/linuxax25/downloads/detail?name=%{name}-@VERSION@.tar.gz
+BuildRoot:      %{_tmppath}/%{name}-@BASEVERSION@@EXTRAVERSION@-%{release}-root-%(%{__id_u} -n)
+Requires:	libstdc++, libax25 >= 1.0.0, zlib
 
 %description
 ax25-tools is a collection of tools that are used to configure an ax.25 enabled
@@ -56,12 +57,13 @@ as Net/ROM and ROSE configuration.
 %setup -q -n %{name}-@VERSION@
 
 %build
-%configure
+%configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var
 make %{?_smp_mflags}
 
 %install
 rm -rf $RPM_BUILD_ROOT
 make install DESTDIR=$RPM_BUILD_ROOT
+make installconf DESTDIR=$RPM_BUILD_ROOT
 
 #don't include these twice
 rm -rf $RPM_BUILD_ROOT%{_docdir}/%{name}/
@@ -72,11 +74,19 @@ rm -rf $RPM_BUILD_ROOT
 %files
 %defattr(-,root,root,-)
 %doc AUTHORS ChangeLog COPYING README
-%doc yamdrv/README.yamdrv user_call/README.user_call tcpip/ttylinkd.README dmascc/README.dmascc
+%doc %{_docdir}/*
+%config %{_sysconfdir}/ax25/* 
 %{_bindir}/*
 %{_sbindir}/*
 %{_mandir}/man?/*
 
 %changelog
+* Fri Jan 29 2011 Lee Woldanski <ve7fet@tparc.org>
+- Fixed some of the versioning output for creating files so it is correct
+- Changed configure line to put files where they belong
+- Added some dependencies
+- Added a make installconf line to install the default config files during packaging
+- Identified the config files
+
 * Sat Jun 27 2009 Ralf Baechle <ralf@linux-mips.org>
 - Initial version
